Sistema de horas concluído

--- a/exc1/index.html
+++ b/exc1/index.html
@@ -3,24 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/exercicios/exc1/css/index.css">
-    <title>Exercício 1</title>
+    <link rel="stylesheet" href="/exc1/css/index.css">
+    <title>Hora do Dia</title>
 </head>
-<body>
+<body onload="carregar()">
     <header>
 
     </header>
     <section>
+        <div id="msg">
+            Aqui aparecerá a imagem
+        </div id="foto">
         <div>
-            
-        </div>
-        <div>
-
+            <img id="imagem" src="/exc1/img/manha.png" alt="campo florido de manhã">
         </div>
     </section>
     <footer>
         Curso em vídeo
     </footer>
-    <script src="/exercicios/exc1/js/index.js"></script>
+    <script src="/exc1/js/index.js"></script>
 </body>
 </html>
