--- a/exc1/index.html
+++ b/exc1/index.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/exc1/css/index.css">
     <title>Hora do Dia</title>
 </head>
+
 <body onload="carregar()">
     <header>
 
+        <h1>Hora do dia</h1>
     </header>
     <section>
-        <div id="msg">
-            Aqui aparecerá a imagem
+
+        <div>
+            <p id="msg"></p>
         </div id="foto">
         <div>
             <img id="imagem" src="/exc1/img/manha.png" alt="campo florido de manhã">
         </div>
     </section>
     <footer>
-        Curso em vídeo
+        Luiz Fernando
     </footer>
     <script src="/exc1/js/index.js"></script>
 </body>
+
 </html>
