Começando a parte do sistema dinâmico de fotos

--- a/exc2/index.html
+++ b/exc2/index.html
@@ -26,11 +26,11 @@
                 <label for="fem">Feminino</label>
             </p>
             <p>
-                <input type="button" value="Verificar">
+                <input type="button" value="Verificar" onclick="verificar()">
             </p>
         </div>
             
-        <div id="res" onclick="verificar()">
+        <div id="res" >
             Preencha os dados acima para ver o resultado
         </div>
     </section>
