Aprendendo sobre laços de repitição: for(início; teste; incremento) {

--- a/exc2/index.html
+++ b/exc2/index.html
@@ -16,7 +16,7 @@
     <section>
 
         <div >
-            <p>Ano de nascimento:
+            <p>Idade atual:
                 <input type="number" name="txtano" id="txtano" min="0">
             </p>
             <p>Sexo:
@@ -35,6 +35,7 @@
         </div>
     </section>
     <footer>
+        
         Luiz Fernando
     </footer>
     <script src="/exc2/js/index.js"></script>
