Resolvendo pequenos erros

--- a/exc3/index.html
+++ b/exc3/index.html
@@ -15,7 +15,7 @@
     </header>
     <section>
 
-        <div class="dados"   >
+        <div class="dados" >
             <p>Início:
                 <input type="number" name="inicio" id="txti">
             </p>
@@ -25,7 +25,7 @@
             <p>Gap
                 <input type="number" name="passo" id="txtp">
             </p>
-            <button type="" onclick="click()">Contar</button>
+            <button type="" onclick="contar()">Contar</button>
         </div>
             
         <div id="res" >
